--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
@@ -32,11 +33,11 @@
                 <div class="section__content">
                     <img src="assets/images/profile.png">
                     <p>
-                        Hey there, I'm Chris Malilay. I'm a three year undergraduate student at The University of Texas currently taking time off to pursue web development. Since I was young, I've always had that soft spot and interest in web development. I expressed a lot of my creativity messing around with web design and gradually moved towards learning how to publish some of the ideas I had over the years as a hobby.
+                        Hey there, I'm Chris Malilay. I'm a three year undergraduate student at The University of Texas currently taking time off to pursue web development. Since I was young, I've always had a strong interest in web development. I expressed a lot of my creativity playing around with web design and gradually moved towards learning how to publish some of the ideas I had over the years as a hobby.
                     </p>
                     <br>
                     <p>
-                        Some of my other hobbies include video games, piano, and basketball. I'm also very interested in PCs, having built my own and for some of my friends and always keeping up to date with the tech industry. I also used to compete at the highest collegiate level for the game Rocket League and played in tournaments representing The University of Texas.
+                        Some of my other hobbies include video games, basketball, and piano. I'm also very interested in PCs, having built my own and for some of my friends and always keeping up to date with the tech industry. I also used to compete at the highest collegiate level for the game Rocket League and played in tournaments representing The University of Texas.
                     </p>
                 </div>
             </section>
