Add responsive styling

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
     <main>
         <div class="container">
-
-            <section class="section-about">
+            
+            <section class="col-lg-11 col-md-8 col-sm-11 section-about">
                 <h1 class="section__title">About Me</h1>
                 <div class="section__content">
                     <img src="assets/images/profile.png">
